Adding box-sizing

--- a/startup-landing-page-clone/css/style.css
+++ b/startup-landing-page-clone/css/style.css
@@ -22,6 +22,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
+	box-sizing: border-box; 
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -64,4 +65,8 @@ div {
 	width: 970px;
 	height: 70px;
 	margin: 0 auto;
+}
+
+.content {
+	padding: 0px 15px;
 }
