--- a/startup-landing-page-clone/css/style.css
+++ b/startup-landing-page-clone/css/style.css
@@ -153,3 +153,49 @@ button:hover {
     border-color: #cf3d0e;
     cursor: pointer;
 }
+
+.cases {
+	background-color: #fff;
+	overflow: hidden;
+	padding-bottom: 5rem;
+}
+
+.cases .content {
+	text-align: center;
+	margin-top: 6rem;
+	padding: none;
+}
+
+.cases h2{
+	font-size: 2.75rem;
+	font-family: 'Roboto', sans-serif;
+	margin: 1.6rem 0 3.125rem;
+	font-weight: 300;
+}
+
+/*.cases .devices {
+	width: 33.3333333%;
+	display: inline-block;
+	 Styles to assist with debugging 
+	border: 1px solid black; 
+	box-sizing: border-box;
+	height: 4em;
+	float: left;
+}*/
+
+.cases .devices > li {
+	font-weight: 400;
+	width: 33.333333%;
+	float: left;
+}
+
+.cases .devices h3 {
+    font-weight: 400;
+    font-size: 1.563rem;
+    margin: 2.5rem 0px 1.875rem;
+}
+
+.cases .devices p {
+    font-weight: 300;
+    font-size: 1.313rem;
+}
