fixes from Neville's suggestions

--- a/shopping-list/css/style.css
+++ b/shopping-list/css/style.css
@@ -22,25 +22,29 @@ header {
 .list-area {
 	margin: 0 auto;
 	padding: 5px 0px 5px 0px;
-	text-align: center;
 	border-bottom: 2px solid #9c9c9c;
 	border-left: 2px solid #9c9c9c;
 	border-right: 2px solid #9c9c9c;
 	width: 560px;
 }
 
+
+
+.list-area>ul {
+ 	padding-left: 200px; 
+}
+
 li {
  	list-style-type: none;
- 	text-align: center;
  	display: block;
  	font-size: 25px;
  	font-weight: 300;
  	margin: 10px 0;
- 	padding-right: 230px;
- 	padding-left: 0px;
+/* 	padding-right: 0px;
+ 	padding-left: 0px;*/
 }
 
-.active-item i {
+.active-item .completed-item i {
  	margin: 0 12px 0 0;
  	padding: 5px 0px 5px 0px;
 }
