--- a/shopping-list/css/style.css
+++ b/shopping-list/css/style.css
@@ -28,10 +28,8 @@ header {
 	width: 560px;
 }
 
-
-
-.list-area>ul {
- 	padding-left: 200px; 
+.list-area > ul {
+ 	padding-left: 200px;
 }
 
 li {
@@ -40,12 +38,20 @@ li {
  	font-size: 25px;
  	font-weight: 300;
  	margin: 10px 0;
-/* 	padding-right: 0px;
- 	padding-left: 0px;*/
 }
 
-.active-item .completed-item i {
+/*.active-item .completed-item i {
  	margin: 0 12px 0 0;
- 	padding: 5px 0px 5px 0px;
+}*/
+
+.active-item > .fa {
+	width: 25px;
 }
 
+.completed-item > .fa {
+	width: 25px;
+}
+
+#delete-items {
+	margin-left: 200px;
+}
